Some changes wrt enhancing UserExperience with accessibility.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div id="high-score">High Score: 0</div>
     </div>
     <h1>Simon Say's</h1>
-    <h3>Press any key to continue...</h3>
+    <h3>Press any key to continue or click the Start button...</h3>
+    <button id="startButton">Start Game</button>
     <div class="btn-container">
         <div class="line-one">
             <div class="btn one" type="button" id="one">1</div>
