--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <button id="startButton">Start Game</button>
     <div class="btn-container">
         <div class="line-one">
-            <div class="btn one" type="button" id="one">1</div>
-            <div class="btn two" type="button" id="two">2</div>
+            <div class="btn one" type="button" id="one"></div>
+            <div class="btn two" type="button" id="two"></div>
         </div>
         <div class="line-two">
-            <div class="btn three" type="button" id="three">3</div>
-            <div class="btn four" type="button" id="four">4</div>
+            <div class="btn three" type="button" id="three"></div>
+            <div class="btn four" type="button" id="four"></div>
         </div>
     </div>
     <button class="restart">Restart</button>
